<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@id/activity_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background_black"
             tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="@dimen/size_2"
            android:layout_height="@dimen/size_2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@drawable/circle_button_grey"
            android:contentDescription="@null"
            android:padding="@dimen/size_4"
            android:src="@drawable/ic_person_white"/>

        <EditText
            android:id="@+id/ed_first_name"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/first_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/ed_last_name"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_med"
            android:hint="@string/last_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/ed_mail"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_med"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/ed_phone"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_med"
            android:hint="@string/phone"
            android:inputType="phone"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_pass"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_med"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/ed_rep_pass"
            style="@style/BlackEditText"
            android:layout_marginTop="@dimen/margin_med"
            android:hint="@string/rep_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_ok"
        style="@style/ImgBtnYesNo"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/size_0"
        android:background="@drawable/button_second_white"
        android:contentDescription="@null"
        android:src="@drawable/ic_ok_green"/>

    <ImageView
        android:id="@+id/btn_cancel"
        style="@style/ImgBtnYesNo"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/size_0"
        android:background="@drawable/button_second_white"
        android:contentDescription="@null"
        android:src="@drawable/ic_cancel_red"/>

</FrameLayout>
