<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragmentCalc"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background_black"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/BtnBackWhite"
            tools:ignore="ContentDescription"/>

        <movesht.com.movesht.CustomFontsTextView
            android:id="@+id/tv_title"
            style="@style/TvWhite"
            android:text="@string/bid_calc"
            app:fontName="BebasNeueBold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="90">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorWhite">

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_add"
                android:layout_width="100dp"
                android:layout_height="@dimen/size_9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/tv_calc_add_black"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_5"
                app:fontName="BebasNeueBold"/>

            <ImageView
                android:id="@+id/ibtn_ok"
                android:layout_width="@dimen/size_9"
                android:layout_height="@dimen/size_9"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:background="@drawable/circle_button_green"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/ic_pen_white_ok"
                tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorWhite">

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_bid"
                style="@style/TvBlack"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/bid"
                app:fontName="BebasNeueBold"/>

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_bid_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="$100"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_10"
                app:fontName="BebasNeueBold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorWhite">

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_comission"
                style="@style/TvBlack"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/comission"
                app:fontName="BebasNeueBold"/>

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_comission_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="$20"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_10"
                app:fontName="BebasNeueBold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorGreen">

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_your"
                style="@style/TvWhite"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/your_profit"
                app:fontName="BebasNeueBold"/>

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_your_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="$80"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_10"
                app:fontName="BebasNeueBold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorWhite">

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_miles"
                style="@style/TvBlack"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/miles"
                app:fontName="BebasNeueBold"/>

            <movesht.com.movesht.CustomFontsTextView
                android:id="@+id/tv_miles_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="647"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_10"
                app:fontName="BebasNeueBold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorLightGrey">

            <LinearLayout
                android:layout_width="26dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/colorGrey">
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="39"
            android:background="@color/colorWhite">

            <TableLayout
                android:id="@+id/table_calc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TableRow
                    android:id="@+id/tb_row_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_1"
                        style="@style/BtnCalc"
                        android:text="@string/_1"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_2"
                        style="@style/BtnCalc"
                        android:text="@string/_2"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_3"
                        style="@style/BtnCalc"
                        android:text="@string/_3"
                        app:fontName="BebasNeueBold"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tb_row_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_4"
                        style="@style/BtnCalc"
                        android:text="@string/_4"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_5"
                        style="@style/BtnCalc"
                        android:text="@string/_5"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_6"
                        style="@style/BtnCalc"
                        android:text="@string/_6"
                        app:fontName="BebasNeueBold"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tb_row_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_7"
                        style="@style/BtnCalc"
                        android:text="@string/_7"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_8"
                        style="@style/BtnCalc"
                        android:text="@string/_8"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_9"
                        style="@style/BtnCalc"
                        android:text="@string/_9"
                        app:fontName="BebasNeueBold"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tb_row_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_10"
                        style="@style/BtnCalc"
                        android:text="@string/point"
                        app:fontName="BebasNeueBold"/>

                    <movesht.com.movesht.CustomFontsButton
                        android:id="@+id/btn_calc_11"
                        style="@style/BtnCalc"
                        android:text="@string/_0"
                        app:fontName="BebasNeueBold"/>

                    <ImageView
                        android:id="@+id/btn_calc_back"
                        android:layout_width="@dimen/size_9"
                        android:layout_height="@dimen/size_9"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/button_calc"
                        android:padding="@dimen/padding_biggest"
                        android:src="@drawable/ic_left_white"
                        tools:ignore="ContentDescription"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>